Update Dockerfile – kópia
fix copy časť

--- a/Dockerfile – kópia
+++ b/Dockerfile – kópia
@@ -57,11 +57,12 @@ RUN cd /var/www/html
 RUN curl -sL https://downloads.partkeepr.org/partkeepr-{$VERSION}.tbz2 |bsdtar --strip-components=1 -xvf- 
 RUN chown -R www-data:www-data /var/www/html 
 
+RUN a2enmod rewrite
 
+COPY php.ini /usr/local/etc/php/php.ini
+COPY apache.conf /etc/apache2/sites-available/000-default.conf
 
 CMD ["apachectl","-D","FOREGROUND"]
-
-RUN a2enmod rewrite
  
 EXPOSE 80
 
